# PrismEngine

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  PrismEngine.sln  PrismEngine.vcxproj  PrismEngine.vcxproj.filters  README.md
.github/workflows/: benchmark.yml
PrismEngine/: CMakeLists.txt  cpp.hint
PrismEngine/src/: PrismEngine.h  PrismEngineECS.h  Window.cpp  Window.h  base.cpp  base.h  bufferObjects.h  bufferWrapper.cpp  bufferWrapper.h  cameraComponent.h  component.h  componentManager.cpp  componentManager.h  config.h  debug.cpp  debug.h  descriptorSet.cpp  descriptorSetLayoutWrapper.cpp  descriptorSetLayoutWrapper.h  deviceChecker.cpp  deviceChecker.h  deviceRater.cpp  deviceRater.h  deviceWrapper.cpp  deviceWrapper.h  entity.h  entityManager.cpp  entityManager.h  fmath.h  graphicsPipeline.cpp  inputResource.h  inputSystem.cpp  inputSystem.h  instance.cpp  instance.h  layersMacroses.h  lightsComponent.h  logger.h  logicalDevice.cpp  logicalDevice.h  (+62 more)
benchmarks/: CMakeLists.txt  benchmarks.cpp  benchmarks.vcxproj  benchmarks.vcxproj.filters
dev/bench/: data.js
docs/: Doxyfile  index.html  requirements.txt
docs/source/: about.rst  conf.py  index.rst  quickstart.rst
docs/source/api/: class_view_hierarchy.rst.include  classprism_1_1_p_g_c_1_1_descriptor_set.rst  classprism_1_1_p_g_c_1_1_descriptor_set_layout.rst  classprism_1_1_p_g_c_1_1_graphics_pipeline.rst  classprism_1_1_p_g_c_1_1_mesh_loader.rst  classprism_1_1_p_g_c_1_1_mesh_manager.rst  classprism_1_1_p_g_c_1_1_texture_manager.rst  classprism_1_1_p_g_c_1_1base_1_1_base.rst  classprism_1_1render_1_1_renderer.rst  classprism_1_1render_1_1_window.rst  classprism_1_1scene_1_1_entity_manager.rst  define_prism_graphic_core_8h_1a816ab7d5c2ce1f0a01216042837beb93.rst  dir_PrismEngine.rst  dir_src.rst  enum_namespaceprism_1_1_p_g_c_1_1utils_1a7193030eda5a2fa42e3caceda991e23f.rst  enum_namespaceprism_1_1logger_1abd51414545b3b1a07bc3b2161cf69856.rst  file_C__Users_Admin_source_repos_PrismEngine_src_Frame.cpp.rst  file_C__Users_Admin_source_repos_PrismEngine_src_Frame.h.rst  file_C__Users_Admin_source_repos_PrismEngine_src_Window.cpp.rst  file_C__Users_Admin_source_repos_PrismEngine_src_Window.h.rst  file_C__Users_Admin_source_repos_PrismEngine_src_WindowVkManager.cpp.rst  file_C__Users_Admin_source_repos_PrismEngine_src_matrix.cpp.rst  file_PrismEngine_src_Config.h.rst  file_PrismEngine_src_Frame.cpp.rst  file_PrismEngine_src_PrismEngine.cpp.rst  file_PrismEngine_src_PrismEngine.h.rst  file_PrismEngine_src_Window.cpp.rst  file_PrismEngine_src_Window.h.rst  file_PrismEngine_src_base.cpp.rst  file_PrismEngine_src_base.h.rst  file_PrismEngine_src_bufferWrapper.cpp.rst  file_PrismEngine_src_bufferWrapper.h.rst  file_PrismEngine_src_componentManager.cpp.rst  file_PrismEngine_src_componentManager.h.rst  file_PrismEngine_src_descriptorSet.cpp.rst  file_PrismEngine_src_deviceRater.h.rst  file_PrismEngine_src_deviceWrapper.cpp.rst  file_PrismEngine_src_entityManager.cpp.rst  file_PrismEngine_src_entityManager.h.rst  file_PrismEngine_src_fmath.h.rst  (+141 more)
docs/source/dev/: build_guide.rst  contributing.rst
docs/source/modules/: logger.rst  math.rst  physics.rst
docs/source/modules/ecs/: index.rst
docs/source/modules/ecs/internal/: architecture.rst  managers.rst  performance.rst
docs/source/modules/ecs/public/: api_reference.rst  overview.rst  quickstart.rst
examples/: CMakeLists.txt  examples.cpp  examples.h  examples.vcxproj  examples.vcxproj.filters
examples/dancingNeonCubes/: dancingNeonCubes.cpp
examples/dancingNeonCubes/models/: plane.mtl
examples/materials/: materials.cpp
examples/materials/models/: Moon.mtl  UranusRing.mtl  Venus.mtl
examples/materials/shaders/: albedo-frag.spv  albedo-vert.spv  albedo.frag  albedo.vert  debug.frag  frag.spv  vert.spv  vert.vert
examples/solarSystem/: solarSystem.cpp
examples/solarSystem/models/: Earth.mtl  Jupiter.mtl  Mars.mtl  Saturn.mtl  SaturnRing.mtl  Uranus.mtl
examples/solarSystem/shaders/: compile.bat  debug.vert  frag.frag  frag.spv  vert.vert
examples/spinningCube/: spinningСube.cpp
examples/spinningCube/models/: nvoip.mtl
examples/spinningCube/shaders/: frag.frag  frag.spv  vert.spv
examples/spinningPrism/: spinningPrism.cpp
examples/spinningPrism/models/: prism.mtl
examples/spinningPrism/shaders/: compile.bat  frag.frag
libs/benchmark/lib/Debug/: benchmark_main.lib
libs/benchmark/lib/Release/: benchmark_main.lib
src/: Config.h  PrismEngine.cpp  PrismEngine.h  RenderVkManager.cpp  RenderVkManager.h  Window.cpp  Window.h  WindowVkManager.cpp  WindowVkManager.h  base.cpp  base.h  bufferWrapper.cpp  cameraComponent.h  component.h  componentManager.cpp  componentManager.h  configs.h  core.cpp  core.h  descriptorSet.cpp  descriptorSet.h  descriptorSetLayout.cpp  descriptorSetLayout.h  deviceChecker.cpp  deviceChecker.h  deviceRater.cpp  deviceRater.h  deviceWrapper.cpp  deviceWrapper.h  entity.h  entityManager.cpp  entityManager.h  fmath.cpp  fmath.h  graphicsPipeline.cpp  graphicsPipeline.h  init.h  logger.cpp  logger.h  matrix.cpp  (+37 more)
tests/: tests.vcxproj
